--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
                     <div class="col-lg-3">
                         <form action="/saveArticle/{{_id}}" method="GET">
                             <button type="button" class="btn btn-default" data-toggle="modal" data-target="#{{_id}}">To add notes</button>
-                            <button type="submit" class="btn btn-primary">To save article</button>   
+                            <button type="submit" class="btn btn-primary button-clicked" >To save article</button>   
                         </form>
                     </div>
                 </div>
