--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -60,7 +60,11 @@
         <h4 class="modal-title">{{title}}</h4>
       </div>
         <div class="modal-body">
-            Your note saved here
+            <form action="/deleteNote/{{_id}}" method="POST">
+                <ul>
+                    <li>{{note}}</li>
+                </ul>
+            </form>
         </div>
         <hr>
       <form action="/addNote/{{_id}}" method="POST">
@@ -69,7 +73,7 @@
                 <label for="comment">Your note:</label>
                 <textarea name="comment" class="form-control" rows="5" id="comment" style="resize: none" ></textarea>
             </div>
-            <button type="submit" class="btn btn-default" data-dismiss="modal">Add Note</button>
+            <button type="submit" class="btn btn-default" >Add Note</button>
             {{!-- <button type="button" class="btn btn-default" data-dismiss="modal">Delete Note</button> --}}
         </div>
         {{!-- <div class="modal-footer">
